# backtest-pricechart

./: .gitignore  Backtest.html  Backtest.md  Dockerfile  LICENSE  README.md  docker-compose.yml
app/: requirements.txt  setup.cfg
app/core/: Backtest.py  ErrorMessages.py  Functions.py  Priceframe.py  Signal.py  Timeframe.py  Types.py
app/datafeed/: _Datafeed.py  _Datafeed_test.py
app/datafeed/exchanges/: Binance.py  CryptoDotCom.py  FTX.py  Nasdaq.py  _Exchanges.py  _Exchanges_test.py
app/datafeed/other/: YahooFinance.py  YahooFinance_test.py
app/notebooks/: Backtest Bollinger Band.ipynb  Backtest.ipynb
app/notebooks/.ipynb_checkpoints/: Backtest Bollinger Band-checkpoint.ipynb  Backtest-checkpoint.ipynb
app/notebooks/.jupyter/nbconfig/: notebook.json
app/scripts-shell/: cron.sh  wait.sh
app/strategies/: BollingerBand.py  _Strategy.py
