[metadata]
name = Backtest trading system
version = 0.1
author = Fernandez Rudy
author_email = rudyfernandez.pro@gmail.com
url = https://github.com/roodrepo
description = Backtest and live trade within the same system
long_description = file: README.rst, LICENSE.rst
keywords = cacheout cache caching memoize memoization fifo lifo lfu lru mru
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = app
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = app

[options.extras_require]
dev =
    black
    coverage
    docformatter
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    invoke
    isort
    mypy
    pylint
    pytest
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-pylint
    python-dateutil
    Sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    tox
    twine
    wheel


[bdist_wheel]
python_tag = py3

[flake8]
exclude = .tox,venv,env
max_line_length = 100
max_complexity = 12
# F401 - `module` imported but unused
# F811 - redefinition of unused `name` from line `N`
# E203 - whitespace before ':'
# W503 - line break before binary operator
ignore = F401,F811,E203,W503

[mypy]
show_column_numbers = True
show_error_context = False
ignore_missing_imports = True
warn_return_any = False
strict_optional = True
warn_no_return = True
warn_redundant_casts = False
warn_unused_ignores = False

[tool:isort]
line_length = 100
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true
force_sort_within_sections = true

[tool:pytest]
junit_family = xunit2
addopts =
    --verbose
    --doctest-modules
    --no-cov-on-fail
    --cov-fail-under=100
    --cov-report=term-missing
    --cov-report=xml:build/coverage/coverage.xml
    --cov-report=html:build/coverage
    --junitxml=build/testresults/junit.xml

[coverage:run]
omit =
    */tests/*
    */test_*
    */ignore/*

